环形链表，带哨兵，删除操作